Add publication post use case